# CellautEngine

./: CMakeLists.txt  CanonicalTree.cpp  CanonicalTree.hpp  CellautTree.cpp  CellautTree.hpp  DrawableCanonicalTree.cpp  DrawableCanonicalTree.hpp  Hashable.hpp  Node.cpp  Node.hpp  kernel.cl  main.cpp  screen.vert
